# Django-Graphen

./: Makefile  README.md  docker-compose.yml
devops/backend/: Dockerfile
devops/postgres/: Dockerfile
devops/redis/: redis.conf
src/backend/: pyproject.toml
src/backend/migrations/: env.py
src/backend/models/: __init__.py  base.py  project.py  role.py  user.py
src/backend/repositories/: __init__.py  base.py  project.py  role.py  user.py
src/backend/routers/: auth.py  projects.py
src/backend/schemas/: __init__.py
src/backend/utils/: __init__.py  databases.py  enviroment.py  security.py  settings.py
